Don't apply animation to other admin panels, make sure simulation is visible

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -44,7 +44,7 @@
 		}
 	}
 
-	.lfr-product-menu-panel.sidenav-fixed.sidenav-menu-slider {
+	.lfr-product-menu-panel.sidenav-fixed.sidenav-menu-slider:not(.lfr-add-panel):not(.lfr-simulation-panel) {
 		opacity: 1;
 		top: 64px;
 
@@ -61,5 +61,9 @@
 			@include transform(translateX(-100px));
 			@include transition-delay(0);
 		}
+	}
+
+	.lfr-admin-panel.sidenav-menu-slider.sidenav-fixed, .lfr-has-simulation-panel .lfr-simulation-device {
+		z-index: 502;
 	}
 }
